统一将产品名称改为"任务拆解小助手"

--- a/.trae/documents/智能任务分解与激励系统-产品需求文档.md
+++ b/.trae/documents/智能任务分解与激励系统-产品需求文档.md
@@ -1,8 +1,8 @@
-# 智能任务分解与激励系统 - 产品需求文档
+# 任务拆解小助手 - 产品需求文档
 
 ## 1. 产品概述
 
-智能任务分解与激励系统是一款基于AI的任务管理工具，通过自然语言处理将复杂任务智能拆解为可执行步骤，配合激励机制和数据可视化，帮助用户提升任务执行效率和完成动力。
+任务拆解小助手是一款基于AI的任务管理工具，通过自然语言处理将复杂任务智能拆解为可执行步骤，配合激励机制和数据可视化，帮助用户提升任务执行效率和完成动力。
 
 - 核心价值：解决用户面对复杂任务时的拖延和执行困难问题，通过AI智能分解和正向激励机制提升任务完成率
 - 目标用户：需要任务管理和执行激励的个人用户，特别是学生、职场人士和自由职业者
@@ -16,7 +16,7 @@
 
 ### 2.2 功能模块
 
-我们的智能任务分解与激励系统包含以下主要页面：
+我们的任务拆解小助手包含以下主要页面：
 
 1. **任务输入页面**：自然语言输入框、AI分解按钮、任务预览区域
 2. **任务执行页面**：步骤列表、完成状态、庆祝动效、进度条
